terraform-ec2/main.tf
provider "aws" {
  region = "us-east-1"   
}

resource "aws_instance" "react_app_server" {
  ami           = "ami-0c101f26f147fa7fd"  
  instance_type = "t3.micro"                

  tags = {
    Name = "ReactApp-EC2"
  }

  key_name = "my-devops-key"   

  vpc_security_group_ids = [aws_security_group.web_sg.id]
}

resource "aws_security_group" "web_sg" {
  name        = "web-sg"
  description = "Allow SSH, HTTP, and custom port 81"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 81
    to_port     = 81
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "instance_public_ip" {
  value = aws_instance.react_app_server.public_ip
}
